@@ -25,10 +25,12 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.github.yizzuide.milkomeda.util.JSONUtil;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
 import java.util.Map;
@@ -43,32 +45,34 @@ import java.util.Map;
  * <br>
  * Create at 2019/11/11 21:51
  */
-@Data
 @AllArgsConstructor
 @NoArgsConstructor
+@EqualsAndHashCode(exclude = {"entity"})
+@Data
 public class CrustUserInfo<T, P> implements Serializable {
+    @Serial
     private static final long serialVersionUID = -3849153553850107966L;
 
     /**
      * 用户id
      */
-    private Serializable uid;
+    protected Serializable uid;
 
     /**
      * 用户名
      */
-    private String username;
+    protected String username;
 
     /**
      * 认证token（stateless=true时有值）
      */
-    private String token;
+    protected String token;
 
     /**
      * token过期时间
      * @since 3.14.0
      */
-    private Long tokenExpire;
+    protected Long tokenExpire;
 
     /**
      * Check is admin user.
@@ -99,7 +103,7 @@ public class CrustUserInfo<T, P> implements Serializable {
      * </pre>
      * @see CrustUserDetailsService#findEntityById(Serializable)
      */
-    private T entity;
+    protected T entity;
 
     /**
      * User entity current class.
@@ -149,13 +153,12 @@ public class CrustUserInfo<T, P> implements Serializable {
      */
     @SuppressWarnings("unchecked")
     public T getEntity() {
-        Crust crust = CrustContext.get();
-        if (crust != null && crust.getProps().isEnableLoadEntityLazy() && this.entity == null) {
-            this.entity = crust.loadEntity(this.getUid());
+        if (this.entity == null) {
+            this.entity = CrustContext.get().loadEntity(this.getUid());
         }
         if (this.entity instanceof Map) {
             if (this.getEntityClass() == null) {
-                return this.entity;
+                throw new IllegalStateException("Can not find entity class");
             }
             this.entity = (T) JSONUtil.parse(JSONUtil.serialize(this.entity), this.getEntityClass());
         }
@@ -166,15 +169,15 @@ public class CrustUserInfo<T, P> implements Serializable {
     public void setPermissionList(List<P> permissionList) {
         if (!CollectionUtils.isEmpty(permissionList)) {
             // user has no permissions!
-            if (permissionList.get(0) == null) {
+            if (permissionList.getFirst() == null) {
                 return;
             }
-            boolean isMap = permissionList.get(0) instanceof Map;
+            boolean isMap = permissionList.getFirst() instanceof Map;
             if (isMap && this.permClass != null) {
                 this.permissionList = (List<P>) JSONUtil.parseList(JSONUtil.serialize(permissionList), this.permClass);
                 return;
             }
-            this.permClass = permissionList.get(0).getClass();
+            this.permClass = permissionList.getFirst().getClass();
         }
         this.permissionList = permissionList;
     }
@@ -195,6 +198,6 @@ public class CrustUserInfo<T, P> implements Serializable {
         if (CollectionUtils.isEmpty(this.getRoleIds())) {
             return null;
         }
-        return getRoleIds().get(0);
+        return getRoleIds().getFirst();
     }
 }
